--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="flexible">
+            <div class="half-width top-banner-items">
+                <h1><span class="color-text">Skip</span>The Diet,</h1>
+                <h1>Just Eat Healthy</h1>
+                <h1>With Food Network</h1>
+                <p>Imagine you don't need a diet because we provide 
+                    healthy and delicious food for you!
+                </p>
+                <a href="#">Order Food</a>
+            </div>
+            <div class="half-width">
+                <img class="top-banner-img" src="./images/Group 8450 (1).png" alt="">
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
