about section added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Imagine you don't need a diet because we provide 
                     healthy and delicious food for you!
                 </p>
-                <a href="#">Order Food</a>
+                <a class="btn" href="#">Order Food</a>
             </div>
             <div class="half-width">
                 <img class="top-banner-img" src="./images/Group 8450 (1).png" alt="">
@@ -28,6 +28,17 @@
         </div>
     </section>
 
-
+    <section class="about">
+        <div class="flexible">
+            <div class="half-width">
+                <img class="about-img" src="./images/female/Person Image.png" alt="">
+            </div>
+            <div class="half-width about-items">
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra, feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non. Non commodo volutpat, pharetra, vel.</p>
+                <a class="btn" href="#">Conatct Me</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
