blog sectio added

--- a/index.html
+++ b/index.html
@@ -40,5 +40,26 @@
             </div>
         </div>
     </section>
+
+    <section class="blog">
+        <h2 class="blog-title">My Recipies</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        <div class="flexible">
+            <div class="half-width">
+                <div class="card left-card">
+                    <img src="./images/food/Project Cover.jpg" alt="">
+                    <h3>Recipie Title</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+            </div>
+            <div class="half-width right-card">
+                <div class="card">
+                    <img src="./images/food/Project Cover.jpg" alt="">
+                    <h3>Recipie Title</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
